# mlfx

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  download_assets.sh
android/: README.md  stop.sh
android/app/: CMakeLists.txt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: EngineContext.cpp  EngineContext.h  EngineJNI.cpp  EngineJNI.h  Log.h
android/app/src/main/java/com/media/camera/preview/activity/: BaseActivity.java
android/app/src/main/java/com/media/camera/preview/capture/: VideoCameraPreview.java  VideoCapture.java
android/app/src/main/java/com/media/camera/preview/render/: VideoRenderer.java
android/app/src/main/res/layout/: activity_gl.xml
android_test/: CMakeLists.txt
android_test/src/: main.cpp
cmake/: angle.cmake  common.cmake  mlfx-lib.cmake  opencv.cmake  stb.cmake  tensorflow-lite.cmake
mlfx/: CMakeLists.txt
mlfx/include/mlfx/: Matrix.h  component.h  engine.h  file_io.h  geometry_src.h  gl_utils.h  image.h  mlfx.h  passes.h  platform.h  shaders_src.h  system.h  utils.h  vector_utils.h
mlfx/include/mlfx/entt/: LICENSE  entt.hpp
mlfx/include/mlfx/nodes/: nodes.h
mlfx/src/: Matrix.cpp  engine.cpp  file_io.cpp  gl_utils.cpp  image.cpp  passes.cpp  system.cpp  utils.cpp
mlfx/src/nodes/: nodes.cpp
mlfx_test/: CMakeLists.txt
mlfx_test/src/: asset_belfry_2611573_1280.jpg.h  asset_style23.jpg.h  belfry_384x384.jpg.h  magenta_arbitrary_image_stylization_v1_256_fp16_transfer_1.tflite.h  out2.bin.h  style_256x256.jpg.h  test_ecs.cpp  test_mlfx.cpp  test_nodes.cpp
scripts/: clang_format.sh  gen_build_all.sh  gen_build_all_run.sh  gen_build_all_test.sh  gen_build_lib_android.sh  gen_build_lib_android_test.sh  gen_build_run_all.sh  gen_build_standalone.sh  gen_build_standalone_test.sh  gen_inline_asset.sh  install_prequisities.sh  size_raport.sh  test_lib_android.sh  third_parties_angle.sh  third_parties_opencv.sh
standalone/: CMakeLists.txt
standalone/src/: main.cpp  sdl.cpp  sdl.h
standalone_test/: CMakeLists.txt
standalone_test/src/: test_main.cpp
third_parties/: .gitignore  angle_args.gn
third_parties/glad/include/glad/: glad.h
third_parties/glad/src/: glad.c
tools/: bin2header  gn
